<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      android:background="#F8F0F0"
    android:textAlignment="center"
    tools:context=".opcoes_reciclagem"
    android:fillViewport="true">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:background="@drawable/verdeagua"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        style="@style/ContainerComponents"
        android:layout_width="342dp"
        android:layout_height="136dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/reutilizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reciclagem"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.526" />

    <ImageButton
      android:id="@+id/btnLata"
      android:layout_width="127dp"
      android:layout_height="115dp"
      android:layout_marginStart="68dp"
      android:layout_marginTop="32dp"
      android:src="@drawable/btnlixeiravermelha"
      android:contentDescription="@string/btnVermelho"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view2" />

    <ImageButton
        android:id="@+id/btnlivro"
        android:layout_width="123dp"
        android:layout_height="115dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/btnLaranja"
        android:src="@drawable/btnlixeiralaranja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnLata"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <ImageButton
        android:id="@+id/btntaca"
        android:layout_width="127dp"
        android:layout_height="115dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/btnAmarelo"
        android:src="@drawable/btnlixeiraamarela"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plastico" />

    <ImageButton
        android:id="@+id/btngarrafaplastica"
        android:layout_width="127dp"
        android:layout_height="115dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/btnVerde"
        android:src="@drawable/btnlixeiraverde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/btntaca"
        app:layout_constraintTop_toBottomOf="@+id/toxico" />

    <ImageButton
        android:id="@+id/btnpneu"
        android:layout_width="127dp"
        android:layout_height="115dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/btnAzul"
        android:src="@drawable/btnlixeiraazul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/metal" />

    <ImageButton
        android:id="@+id/btnCinza"
        android:layout_width="127dp"
        android:layout_height="115dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/btnCinza"
        android:src="@drawable/btnlixeiracinza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/btnpneu"
        app:layout_constraintTop_toBottomOf="@+id/vidro" />

    <ImageButton
        android:id="@+id/btnMarrom"
        android:layout_width="127dp"
        android:layout_height="115dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/btnMarrom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/papel"
        app:srcCompat="@drawable/btnlixeiramarrom" />

    <ImageButton
        android:id="@+id/btnRoxo"
        android:layout_width="127dp"
        android:layout_height="115dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/btnRoxo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnMarrom"
        app:layout_constraintTop_toBottomOf="@+id/hospitalar"
        app:srcCompat="@drawable/btnlixeiraroxa" />

    <TextView
        android:id="@+id/plastico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="249dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/plastico"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLata" />

    <TextView
        android:id="@+id/toxico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/toxico"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlivro" />

    <TextView
        android:id="@+id/metal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/metal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btntaca" />

    <TextView
        android:id="@+id/vidro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/vidro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btngarrafaplastica" />

    <TextView
        android:id="@+id/papel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/papel"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpneu" />

    <TextView
        android:id="@+id/hospitalar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hospitalar"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCinza" />

    <TextView
        android:id="@+id/organico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/organico"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMarrom" />

    <TextView
        android:id="@+id/radioativo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/radioativo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.751"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRoxo" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>